<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:layout_marginTop="16dp"
        tools:context=".VaccinationAppointmentFragment"
>
    <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/appointment_heading"
            android:id="@+id/textView2"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:textColor="@color/purple_500"
            app:layout_constraintHorizontal_bias="0.495"
    />
    <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/name_appointment_form"
            android:inputType="text"
            android:id="@+id/personName"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/surname_appointment_form"
            android:ems="10"
            android:id="@+id/personSurname"
            app:layout_constraintEnd_toEndOf="@+id/personName"
            app:layout_constraintStart_toStartOf="@+id/personName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/personName"
            android:layout_marginTop="16dp"
    />
    <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/social_security_number_appointment_form"
            android:ems="10"
            android:id="@+id/personSocialSecurityNumber"
            app:layout_constraintStart_toStartOf="@+id/personSurname"
            app:layout_constraintEnd_toEndOf="@+id/personSurname"
            app:layout_constraintTop_toBottomOf="@+id/personSurname"
            android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="1.0"
    />
    <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:id="@+id/personTel"
            android:hint="@string/tel_appointment_form"
            android:ems="10"
            app:layout_constraintStart_toStartOf="@+id/personSocialSecurityNumber"
            app:layout_constraintEnd_toEndOf="@+id/personSocialSecurityNumber"
            app:layout_constraintTop_toBottomOf="@+id/personSocialSecurityNumber"
            android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.0"
    />
    <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/personEmail"
            android:hint="@string/email_appointment_form"
            app:layout_constraintStart_toStartOf="@+id/personTel"
            app:layout_constraintEnd_toEndOf="@+id/personTel"
            app:layout_constraintTop_toBottomOf="@+id/personTel"
            android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <ImageButton
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:background="@color/purple_500"
            android:src="@drawable/ic_baseline_date_range_24"
            android:id="@+id/change_date_btn"
            app:layout_constraintTop_toTopOf="@+id/appointment_date"
            app:layout_constraintStart_toEndOf="@+id/appointment_date"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="4dp"
    />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:hint="@string/date_appointment_form"
            android:id="@+id/appointment_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/change_date_btn"
            app:layout_constraintTop_toBottomOf="@+id/personEmail"
            android:layout_marginTop="6dp"
            android:textSize="18sp"
            app:layout_constraintHorizontal_bias="0.451"
            android:focusable="false"
            android:enabled="false"
    />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:hint="@string/time_appointment_form"
            android:ems="10"
            android:id="@+id/appointment_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/change_time_btn"
            app:layout_constraintTop_toBottomOf="@+id/change_date_btn"
            android:layout_marginTop="6dp"
            android:textSize="18sp"
            app:layout_constraintHorizontal_bias="0.336"
            android:focusable="false"
            android:enabled="false"
    />
    <ImageButton
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:id="@+id/change_time_btn"
            android:background="@color/purple_500"
            android:src="@drawable/ic_baseline_access_time_24"
            app:layout_constraintTop_toTopOf="@+id/appointment_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/appointment_time"
            android:layout_marginTop="4dp"
    />
    <Button
            android:text="@string/btn_appointment_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_make_appointment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appointment_time"
            app:layout_constraintBottom_toBottomOf="parent"
    />


</androidx.constraintlayout.widget.ConstraintLayout>