<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".StatisticsFragment"
>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics_heading"
            android:layout_marginTop="8dp"
            android:id="@+id/statistics_heading"
            android:layout_centerHorizontal="true"
            android:textSize="22sp"
            android:textColor="@color/purple_500"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics_text"
            android:id="@+id/statistics_text"
            android:layout_below="@+id/statistics_heading"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:textColor="@color/purple_500"
    />
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/statistics_text"
            android:layout_marginTop="8dp"
            android:id="@+id/layout_statistic_1"
    >
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:id="@+id/startDate"
                    android:hint="@string/statistics_start_date"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/startDateBtn"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp"
                    android:focusable="false"
                    android:enabled="false"
            />
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:id="@+id/endDate"
                    android:hint="@string/statistics_end_date"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/endDateBtn"
                    app:layout_constraintHorizontal_bias="0.555"
                    app:layout_constraintTop_toBottomOf="@+id/startDate"
                    android:layout_marginTop="8dp"
                    android:focusable="false"
                    android:enabled="false"
            />
            <ImageButton
                    android:src="@drawable/ic_baseline_date_range_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/startDateBtn"
                    android:backgroundTint="@color/purple_500"
                    app:layout_constraintTop_toTopOf="@+id/startDate"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/startDate"
            />
            <ImageButton
                    android:src="@drawable/ic_baseline_date_range_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/endDateBtn"
                    android:backgroundTint="@color/purple_500"
                    app:layout_constraintTop_toTopOf="@+id/endDate"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/endDate"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics_btn_submit"
            android:id="@+id/submit_statistic_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/layout_statistic_1"
    />
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_statistic_2"
            android:layout_below="@+id/submit_statistic_btn"
            android:layout_marginTop="2dp"
    >
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:background="@color/purple_500"
                android:padding="4dp"
        >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/date_table_heading"
                        android:text="@string/date_table_heading"
                        android:layout_margin="4dp"
                        android:textColor="@color/white"
                />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/vaccines_table_heading"
                        android:text="@string/vaccines_table_heading"
                        android:layout_margin="4dp"
                        android:textColor="@color/white"
                />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/dose1_table_heading"
                        android:text="@string/dose1_table_heading"
                        android:layout_margin="4dp"
                        android:textColor="@color/white"
                />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/dose2_table_heading"
                        android:text="@string/dose2_table_heading"
                        android:layout_margin="4dp"
                        android:textColor="@color/white"
                />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/total_vaccines_until_last_day_table_heading"
                        android:text="@string/total_vaccines_until_last_day_table_heading"
                        android:layout_margin="4dp"
                        android:textColor="@color/white"
                />
        </LinearLayout>
    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/statisticsRecView"
            android:layout_below="@+id/layout_statistic_2"
            android:layout_marginTop="8dp"
    />
</RelativeLayout>