<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                tools:context=".ChangeAppointmentFragment">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/heading_change_appointment"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:id="@+id/change_apppointment_heading"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_centerHorizontal="true"
            android:text="@string/text_change_appointment"
            android:id="@+id/text_change_appointment"
            android:layout_below="@+id/change_apppointment_heading"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
    />
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_change_appointment"
            android:layout_marginTop="8dp"
            android:id="@+id/change_datetime_inputs"
    >
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        >
            <ImageButton
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:background="@color/purple_500"
                    android:src="@drawable/ic_baseline_date_range_24"
                    android:id="@+id/choose_date_btn"
                    app:layout_constraintTop_toTopOf="@+id/appointment_date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/change_date_btn"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
            />
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:hint="@string/date_appointment_form"
                    android:id="@+id/edt_appointment_date"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/choose_date_btn"
                    app:layout_constraintTop_toBottomOf="@+id/personEmail"
                    android:layout_marginTop="12dp"
                    android:textSize="18sp"
                    app:layout_constraintHorizontal_bias="0.451"
                    android:focusable="false"
                    android:enabled="false"
            />
            <ImageButton
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:background="@color/purple_500"
                    android:src="@drawable/ic_baseline_access_time_24"
                    android:id="@+id/choose_time_btn"
                    app:layout_constraintTop_toTopOf="@+id/edt_appointment_time"
                    app:layout_constraintStart_toEndOf="@+id/edt_appointment_time"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
            />
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="time"
                    android:hint="@string/time_appointment_form"
                    android:ems="10"
                    android:id="@+id/edt_appointment_time"
                    android:textSize="18sp"
                    android:focusable="false"
                    android:enabled="false"
                    android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@+id/edt_appointment_date"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.108"
                    app:layout_constraintEnd_toStartOf="@+id/choose_time_btn"
                    app:layout_constraintStart_toStartOf="parent"
            />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
    <Button
            android:text="@string/change_appointment_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_update_appointment"
            android:layout_below="@+id/change_datetime_inputs"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/warning"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_cancel_appointment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_appointment_text"
            app:layout_constraintHorizontal_bias="0.378"
            app:layout_constraintVertical_bias="0.054"
    />
</RelativeLayout>