<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".CompleteVaccinationAppointmentFragment">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cva_layout1"
    >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name"
                android:textSize="20sp"
                android:layout_marginTop="16dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/vaccinatedPersonName"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="Surname"
                android:textSize="20sp"
                android:layout_marginTop="16dp"
                android:id="@+id/vaccinatedPersonSurname"
                android:layout_below="@+id/vaccinatedPersonName"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/complete_vaccination_appointment_text"
                android:layout_below="@+id/vaccinatedPersonSurname"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
        />
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cva_layout1"
            android:layout_marginTop="16dp"
    >
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/date_appointment_text"
                    android:textSize="18sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/time_appointment_text"
                    android:layout_marginTop="4dp"
                    android:text="7-8-2021"
                    app:layout_constraintHorizontal_bias="0.502"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/time_appointment_text"
                    android:textSize="18sp"
                    android:text="20:30"
                    app:layout_constraintTop_toTopOf="@+id/date_appointment_text"
                    app:layout_constraintStart_toEndOf="@+id/date_appointment_text"
                    app:layout_constraintEnd_toEndOf="parent"
            />
            <Button
                    android:text="@string/change_appointment_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_change_appointment"
                    android:backgroundTint="@color/warning"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btn_cancel_appointment"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/date_appointment_text"
                    app:layout_constraintHorizontal_bias="0.378"
                    app:layout_constraintVertical_bias="0.054"/>
            <Button
                    android:text="@string/cancel_appointment_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_cancel_appointment"
                    android:backgroundTint="@color/danger"
                    app:layout_constraintTop_toTopOf="@+id/btn_change_appointment"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_change_appointment"
                    app:layout_constraintStart_toEndOf="@+id/btn_change_appointment"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</RelativeLayout>